gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21508.d
version https://git-lfs.github.com/spec/v1
oid sha256:9beff72cb146a669a7dd57d1b0db940a1fa8a6db9747f8d7d17db0a4e79d76f7
size 434
